Fix sidebar overflow

--- a/sass/components/_post.scss
+++ b/sass/components/_post.scss
@@ -233,7 +233,6 @@
 @media (min-width: 1024px) {
 	.thumbnail-header-background:not(.no-sidebar) {
 		.sidebar {
-			position: relative;
 			margin-top: 48px;
 		}
 		.entry-header {
