--- a/style.css
+++ b/style.css
@@ -2015,7 +2015,6 @@ blockquote.has-text-align-right,
 
 @media (min-width: 1024px) {
 	.thumbnail-header-background:not(.no-sidebar) .sidebar {
-		position: relative;
 		margin-top: 48px;
 	}
 	.thumbnail-header-background:not(.no-sidebar) .entry-header {
